crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__getitem.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::getitem":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.control.templatetags.getitem::filter::getitem": required_argument
block_specs: {}
