crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__hierarkey_form.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::propagated":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.control.templatetags.hierarkey_form::tag::propagated":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 3
        message:
          PercentFormat:
            template: "%r tag requires at least three arguments"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: event
          requirement: required
          kind: Variable
        - name: url
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "pretix.control.templatetags.hierarkey_form::tag::propagated":
    body_analysis_evidence: not_detected
    end_tag: endpropagated
    intermediates: []
