crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__mail_settings_preview.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::getattr":
    kind: filter
    has_doc: false
  "filter::hasattr":
    kind: filter
    has_doc: false
  "filter::split":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.control.templatetags.mail_settings_preview::filter::getattr": required_argument
  "pretix.control.templatetags.mail_settings_preview::filter::hasattr": required_argument
  "pretix.control.templatetags.mail_settings_preview::filter::split": optional_argument
block_specs: {}
