crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__order_overview.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::togglesum":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.control.templatetags.order_overview::filter::togglesum": optional_argument
block_specs: {}
